# GaiaByteUtility

./: CMakeLists.txt  README.md
GaiaByteUtility/: Byte.hpp  BytesAccessor.hpp  BytesAddress.cpp  BytesAddress.hpp  BytesBuilder.hpp  BytesPrinter.cpp  BytesPrinter.hpp  CMakeLists.txt  ConstBytesAddress.hpp  GaiaByteUtility.hpp  StructureTranslator.hpp
GaiaByteUtility/Bitwise/: BitwisePrinter.cpp  BitwisePrinter.hpp  ByteBitwiseAccessor.cpp  ByteBitwiseAccessor.hpp  ByteBitwiseReader.cpp  ByteBitwiseReader.hpp  WordBitwiseAccessor.hpp
GaiaByteUtility/Containers/: BytesArray.hpp  BytesBuffer.hpp
UnitTest/: ByteBitwiseAccessorTest.cpp  BytesBuilderTest.cpp  CMakeLists.txt
